<resources>
    <string name="app_name">DDM</string>
    <string name="HW">Hello World</string>
    <string name="new_schedule">Criar Novo Horário</string>
    <string name="schedule_details">Detalhes da Agenda</string>
    <string name="morning">Manhã</string>
    <string name="afternoon">Tarde</string>
    <string name="night">Noite</string>
    <string name="init_hour">Começa em:</string>
    <string name="finish_hour">Termina em:</string>
    <string name="init_hour_hint">12:00</string>
    <string name="finish_hour_hint">14:00</string>
    <string name="event_name_hint">Nome do Evento</string>
    <string name="calendar_title">Selecione o Dia no calendário para ver seus respectivos eventos:</string>
    <string name="ok">Confirmar</string>
    <string name="save">Salvar</string>
</resources>