<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <CalendarView
        android:id="@+id/dns_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:minDate="24/03/2021"/>

    <TextView
        android:id="@+id/dns_init_hour_txt"
        style="@style/TextH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_hour"
        app:layout_constraintStart_toStartOf="@+id/dns_calendar"
        app:layout_constraintTop_toBottomOf="@+id/dns_calendar" />

    <EditText
        android:id="@+id/dns_init_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/init_hour_hint"
        android:textAlignment="center"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/dns_init_hour_txt"
        app:layout_constraintStart_toStartOf="@+id/dns_init_hour_txt"
        app:layout_constraintTop_toBottomOf="@+id/dns_init_hour_txt" />

    <TextView
        android:id="@+id/dns_finish_hour_txt"
        style="@style/TextH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_hour"
        app:layout_constraintEnd_toEndOf="@+id/dns_calendar"
        app:layout_constraintTop_toBottomOf="@+id/dns_calendar" />

    <EditText
        android:id="@+id/dns_finish_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/finish_hour_hint"
        android:textAlignment="center"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/dns_finish_hour_txt"
        app:layout_constraintStart_toStartOf="@+id/dns_finish_hour_txt"
        app:layout_constraintTop_toBottomOf="@+id/dns_finish_hour_txt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dns_submit_btn"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_check"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dns_finish_hour"
        app:layout_constraintStart_toEndOf="@+id/dns_init_hour"
        app:layout_constraintTop_toBottomOf="@+id/dns_calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>